--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,8 @@
         android:layout_marginStart="68dp"
         android:layout_marginTop="43dp"
         android:text="@string/login"
+        android:textColor="#212121"
+        android:textColorLink="@color/purple_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
